# daedalus

./: .gitignore  AGENTS.md  Cargo.toml  README.md
.github/workflows/: release.yml
crates/ddl/: Cargo.toml
crates/ddl/src/: app.rs  config.rs  error.rs  ids.rs  kv.rs  lib.rs  log_ui.rs  main.rs  model.rs  presentation.rs  runtime.rs  store.rs
docs/: architecture.md  commands.md  state-layout.md
