[package]
name = "ddl"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "CLI scaffold for daedalus, a checkpointing layer for coding agents."

[lib]
name = "ddl"
path = "src/lib.rs"

[[bin]]
name = "ddl"
path = "src/main.rs"

[dependencies]
crossterm = "0.28"
ratatui = "0.29"
uuid = { version = "1", features = ["v4"] }
